# fit

./: .gitignore  Cargo.toml
code-generation/: Cargo.toml
code-generation/src/: lib.rs  parse.rs  pdf.rs  translation.rs
fitting/: Cargo.toml
fitting/src/: data.rs  generation.rs  lib.rs  parameter.rs
intermediate-representation/: Cargo.toml
intermediate-representation/src/: binary_operation.rs  builtin.rs  constant.rs  expression.rs  lib.rs  variable.rs
src/: lib.rs
